--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dashboard-app",
   "version": "0.1.0",
-  "author": "Mikhail Nepomniashchii",
+  "author": "Anna Voroshilova",
   "private": true,
   "dependencies": {
     "react": "^17.0.2",
